# TensorRT-Plugin-Demo

./: CMakeLists.txt  conv_layernorm_model.onnx  demo.engine  layernorm_custom_model.onnx  layernorm_model.onnx  main.cpp  myselu_kernel.cu  myselu_kernel.h  myselu_plugin.cpp  myselu_plugin.h  output.json
layernorm/: CMakeLists.txt  layernorm_kernel.cu  layernorm_kernel.h  layernorm_plugin.cpp  layernorm_plugin.h  layernorm_with_eps.engine  layernorm_with_eps.onnx  output.json  output_py.json
layernorm/include/: layernormPlugin.h
layernorm/python/: bin2json.py  conv_layernorm_model.onnx  custom_layernorm.onnx  debug_onnx.py  layernorm.py  model_with_debug_outputs.onnx  onnx_match.py  output_data.json
layernorm/src/: layernormKernel.cu  layernormPlugin.cpp
layernorm/test/: testLayerNorm.cpp
python/: check_selu_onnx.py  engine_test.py  just_selu.onnx  layernorm_op.py  modify_onnx_custom_node.py  modify_onnx_precsion.py  reference_model.onnx  selu.py  selu_torch.py
python/workspace/: demo.onnx
workspace/: just_selu.onnx  selu_torch.onnx
